layout issues fixed

--- a/src/pages/UserRegistration/userRegistration.css
+++ b/src/pages/UserRegistration/userRegistration.css
@@ -1,6 +1,6 @@
 .container {
-  min-width: 100vh;
-  min-height: 100vh;
+  width: 100%;
+  height: 100%;
   background: #ffffe0;
   color: #000;
   display: flex;
@@ -38,4 +38,62 @@
 
 .custom-google-button {
   color: #000 !important;
+}
+
+@media screen and (max-width: 767px) {
+  .css-qndp1g-MuiAvatar-root {
+    width: 210px;
+    height: auto;
+  }
+  .container {
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+  }
+  .panel {
+    min-height: 70vh;
+    min-width: 280px;
+  }
+
+  .css-5joihi .MuiTextField-root {
+    width: 200px !important;
+  }
+  .formContainer {
+    width: 100%;
+    min-height: 60%;
+  }
+
+  .logoSection {
+    display: flex;
+    margin: 0 0 10px 0;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .css-qndp1g-MuiAvatar-root {
+    width: 110px;
+    height: auto;
+  }
+  .container {
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+  }
+  .panel {
+    min-height: 50vh;
+    min-width: 280px;
+  }
+
+  .css-5joihi .MuiTextField-root {
+    width: 200px !important;
+  }
+  .formContainer {
+    width: 100%;
+    min-height: 60%;
+  }
+
+  .logoSection {
+    display: flex;
+    margin: 0 0 10px 0;
+  }
 }
